--- a/src/components/footer/index.html
+++ b/src/components/footer/index.html
@@ -1,31 +1,67 @@
-<div class="container">
-  <footer class="footer">
+<footer class="footer">
     <h2 class="footer__title">Contacts</h2>
     <p class="footer__text">Want to know more or just chat?You are welcome!</p>
-    @@include('button-black/index.html', {
-      "text": "send message";
+    @@include('button/index.html', {
+      "text":"Send message",
+      "class":"button_black",
+      "type":"button"
     })
-    <ul class="footer__social-list">
+    <ul class="footer__social-list list-hidden-marker">
       <li class="footer__social-item">
-        <a class="footer__social-link button-white">Instagram</a>
+        <a class="footer__social-link" href="#">
+          @@include('button/index.html', {
+            "text":"Instagram",
+            "class":"button_white",
+            "type":"button"
+          })
+        </a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link button-white">Vk</a>
+        <a class="footer__social-link" href="#">
+          @@include('button/index.html', {
+            "text":"Vk",
+            "class":"button_white",
+            "type":"button"
+          })
+        </a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link button-white">Telegram</a>
+        <a class="footer__social-link" href="#">
+          @@include('button/index.html', {
+            "text":"Telegram",
+            "class":"button_white",
+            "type":"button"
+          })
+        </a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link button-white">Mail</a>
+        <a class="footer__social-link" href="#">
+          @@include('button/index.html', {
+            "text":"Mail",
+            "class":"button_white",
+            "type":"button"
+          })
+        </a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link button-white">GitHub</a>
+        <a class="footer__social-link" href="#">
+          @@include('button/index.html', {
+            "text":"GitHub",
+            "class":"button_white",
+            "type":"button"
+          })
+        </a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link button-white">Phone</a>
+        <a class="footer__social-link" href="#">
+          @@include('button/index.html', {
+            "text":"Phone",
+            "class":"button_white",
+            "type":"button"
+          })
+        </a>
       </li>
     </ul>
     <p class="footer__dl-info">Design by <span class="footer__dl-name">DL Academy</span></p>
-    <p class="footer__dl-info">Program code from Antonina</p>
-  </footer>
-</div>
+    <p class="footer__code-info">Program code from Antonina</p>
+</footer>
