сделал открывающие окна

--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -16,8 +16,10 @@
 @import "./button/button";
 @import "./buttonarrow/arrow";
 @import "./input/input";
-@import "./login/login";
 @import "./sign/sign";
+@import "./login/login";
+@import "./message/message";
+
 
 
 .list-hidden-marker {
