--- a/src/components/footer/index.html
+++ b/src/components/footer/index.html
@@ -3,7 +3,7 @@
     <p class="footer__text">Want to know more or just chat?You are welcome!</p>
     @@include('button/index.html', {
       "text":"Send message",
-      "class":"button_black",
+      "class":"button_black button-message_js",
       "type":"button"
     })
     <ul class="footer__social-list list-hidden-marker">
@@ -65,3 +65,4 @@
     <p class="footer__dl-info">Design by <span class="footer__dl-name">DL Academy</span></p>
     <p class="footer__code-info">Program code from Antonina</p>
 </footer>
+@@include('message/index.html')
