--- a/src/components/sign/index.html
+++ b/src/components/sign/index.html
@@ -1,58 +1,58 @@
-<div class="popup sign_js popup_none">
+<div class="sign-popup sign-popup_js sign-popup_none">
   <form class="form-sign" name="sign-up">
-    <label class="form-sign__label" for="input-email">Email <span class="form-sign__label_red">*</span></label>
+    <label class="form-sign__label" for="sign-input-email">Email <span class="form-sign__label_red">*</span></label>
     @@include('input/index.html', {
       "type":"text",
       "name":"email",
-      "id":"input-email"
+      "id":"sign-input-email"
     })
     <ul class="form-sign__list list-hidden-marker">
       <li class="form-sign__item">  
-        <label class="form-sign__label" for="input-name">Name <span class="form-sign__label_red">*</span></label>
+        <label class="form-sign__label" for="sign-input-name">Name <span class="form-sign__label_red">*</span></label>
         @@include('input/index.html', {
           "type":"text",
           "name":"name",
-          "id":"input-name"
+          "id":"sign-input-name"
         })
       </li>
       <li class="form-sign__item">  
-        <label class="form-sign__label" for="input-surname">Surname <span class="form-sign__label_red">*</span></label>
+        <label class="form-sign__label" for="sign-input-surname">Surname <span class="form-sign__label_red">*</span></label>
         @@include('input/index.html', {
           "type":"text",
           "name":"surname",
-          "id":"input-surname"
+          "id":"sign-input-surname"
         })
       </li>
       <li class="form-sign__item">  
-        <label class="form-sign__label" for="input-password">Password <span class="form-sign__label_red">*</span></label>
+        <label class="form-sign__label" for="sign-input-password">Password <span class="form-sign__label_red">*</span></label>
         @@include('input/index.html', {
           "type":"password",
           "name":"password",
-          "id":"input-password"
+          "id":"sign-input-password"
         })
       </li>
       <li class="form-sign__item">  
-        <label class="form-sign__label" for="input-repassword">Repeat password <span class="form-sign__label_red">*</span></label>
+        <label class="form-sign__label" for="sign-input-repassword">Repeat password <span class="form-sign__label_red">*</span></label>
         @@include('input/index.html', {
           "type":"password",
           "name":"repassword",
-          "id":"input-repassword"
+          "id":"sign-input-repassword"
         })
       </li>
       <li class="form-sign__item">  
-        <label class="form-sign__label" for="input-location">Location <span class="form-sign__label_red">*</span></label>
+        <label class="form-sign__label" for="sign-input-location">Location <span class="form-sign__label_red">*</span></label>
         @@include('input/index.html', {
           "type":"text",
           "name":"location",
-          "id":"input-location"
+          "id":"sign-input-location"
         })
       </li>
       <li class="form-sign__item">  
-        <label class="form-sign__label" for="input-age">Age <span class="form-sign__label_red">*</span></label>
+        <label class="form-sign__label" for="sign-input-age">Age <span class="form-sign__label_red">*</span></label>
         @@include('input/index.html', {
           "type":"number",
           "name":"age",
-          "id":"input-age"
+          "id":"sign-input-age"
         })
       </li>      
     </ul> 
