--- a/src/components/buttonarrow/_arrow.scss
+++ b/src/components/buttonarrow/_arrow.scss
@@ -18,6 +18,10 @@
 
   &_top{
     transform: rotate(90deg);
+    position: fixed;
+    bottom: 10%;
+    right: 10%;
+    z-index: 2;
   }
 
   &_left {
