--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -6,13 +6,13 @@
         <li class="header__nav-item">
           <ul class="header__nav-list list-hidden-marker">
             <li class="header__nav-item"><a class="header__nav-link" href="/pages/blog/index.html">My blog</a></li>
-            <li class="header__nav-item"><a class="header__nav-link" href="#">Sign in</a></li>
-            <li class="header__nav-item"><a class="header__nav-link" href="#">Register</a></li>
+            <li class="header__nav-item"><button class="header__nav-link button-login_js" type="button">Sign in</button></li>
+            <li class="header__nav-item"><button class="header__nav-link button-sign_js" type="button">Register</button></li>
           </ul>
         </li>
       </ul>
     </nav>
   </header>
 </div>
-<!-- @@include('login/index.html') -->
 @@include('sign/index.html')
+@@include('login/index.html')
