--- a/src/components/login/_login.scss
+++ b/src/components/login/_login.scss
@@ -1,18 +1,3 @@
-.popup {
-  background-color: rgba(246, 246, 246, 0.99);
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  display: flex;
-  z-index: 1;
-
-  &_none {
-    display: none;
-  }
-}
-
 .form-login {
   padding: 40px 40px;
   border: 2.5px solid #070707;
@@ -44,9 +29,12 @@
   }
 
   &__item {
-    max-width: 290px;
-    width: 100%;
+    width: 290px;
     margin-bottom: 20px;
+
+    @media (max-width: 767px) {
+      widows: 280px;
+    }
   }
 
   &__label {
@@ -57,5 +45,20 @@
     &_red {
       color: #ff0000;
     }
+  }
+}
+
+.login-popup {
+  background-color: rgba(246, 246, 246, 0.99);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  z-index: 1;
+
+  &_none {
+    display: none;
   }
 }
