--- a/src/components/sign/index.html
+++ b/src/components/sign/index.html
@@ -2,7 +2,7 @@
   <form class="form-sign" name="sign-up">
     <label class="form-sign__label" for="sign-input-email">Email <span class="form-sign__label_red">*</span></label>
     @@include('input/index.html', {
-      "type":"text",
+      "type":"email",
       "name":"email",
       "id":"sign-input-email"
     })
