--- a/src/components/footer/index.html
+++ b/src/components/footer/index.html
@@ -8,61 +8,25 @@
     })
     <ul class="footer__social-list list-hidden-marker">
       <li class="footer__social-item">
-        <a class="footer__social-link" href="#">
-          @@include('button/index.html', {
-            "text":"Instagram",
-            "class":"button_white",
-            "type":"button"
-          })
-        </a>
+        <a class="footer__social-link button_white button" href="#">Instagram</a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link" href="#">
-          @@include('button/index.html', {
-            "text":"Vk",
-            "class":"button_white",
-            "type":"button"
-          })
-        </a>
+        <a class="footer__social-link button_white button" href="#">Vk</a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link" href="#">
-          @@include('button/index.html', {
-            "text":"Telegram",
-            "class":"button_white",
-            "type":"button"
-          })
-        </a>
+        <a class="footer__social-link button_white button" href="#">Telegram</a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link" href="#">
-          @@include('button/index.html', {
-            "text":"Mail",
-            "class":"button_white",
-            "type":"button"
-          })
-        </a>
+        <a class="footer__social-link button_white button" href="#">Mail</a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link" href="#">
-          @@include('button/index.html', {
-            "text":"GitHub",
-            "class":"button_white",
-            "type":"button"
-          })
-        </a>
+        <a class="footer__social-link button_white button" href="#">GitHub</a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link" href="#">
-          @@include('button/index.html', {
-            "text":"Phone",
-            "class":"button_white",
-            "type":"button"
-          })
-        </a>
+        <a class="footer__social-link button_white button" href="#">Phone</a>
       </li>
     </ul>
-    <p class="footer__dl-info">Design by <span class="footer__dl-name">DL Academy</span></p>
+    <p class="footer__dl-info">Design by <a class="footer__dl-name" href="#">DL Academy</a></p>
     <p class="footer__code-info">Program code from Antonina</p>
 </footer>
 @@include('message/index.html')
