--- a/src/components/message/_message.scss
+++ b/src/components/message/_message.scss
@@ -5,6 +5,15 @@
   box-sizing: border-box;
   padding: 40px 40px;
   border: 2.5px solid #070707;
+  
+  @media (max-width: 767px) {
+    max-width: 320px;
+    padding: 20px;
+  }
+
+  @media (max-width: 400px) {
+    border: none;
+  }
 
   &__button-close {
     border: none;
@@ -20,6 +29,16 @@
 
     &:hover, &:focus {
       opacity: 0.9;
+    }
+    
+    @media (max-width: 1023px) {
+      top: -35px;
+      right: 0;
+    }
+
+    @media (max-width: 400px) {
+      top: -25px;
+      left: 25px;
     }
   }
 
@@ -42,6 +61,7 @@
     margin-bottom: 6px;
     font-size: 14px;
     line-height: 16px;
+    font-weight: 500;
 
     &_red {
       color: #ff0000;
@@ -59,6 +79,7 @@
     margin-bottom: 6px;
     font-size: 14px;
     line-height: 16px;
+    font-weight: 500;
   }
 
   &__textarea-input {
@@ -95,6 +116,7 @@
 
   &__check-label {
     padding-left: 30px;
+    font-weight: 500;
     margin-left: -13px;
     position: relative;
     color: #E5E5E5;
