--- a/src/pages/blog/style.scss
+++ b/src/pages/blog/style.scss
@@ -53,16 +53,19 @@
   }
   
   &__search-list {
+    width: 100%;
     margin: 0;
     display: flex;
     justify-content: space-between;
+  }  
+
+  &__search-item {
 
     &:nth-child(1) {
-      margin-right: 30px;
       width: 100%;
+      margin-right: 30px;
     }
   }
-
 
   &__checkbox-label {
     position: relative;
@@ -307,21 +310,26 @@
 .card-block {
   display: flex;
   border-top: 2px solid #E5E5E5;
-  padding-top: 20xp;
+  padding-top: 20px;
   padding-bottom: 20px;
   width: 100%;
+  align-items: flex-start;
 
   &__text-container {
-    padding: 20xp 0;
-    margin-left: 20px;
+    padding: 20px 0 20px 20px;
   }
 
   &__tags-list {
     display: flex;
+    padding: 0;
+    margin: 0;
   }
 
   &__tag-item {
     margin-right: 5px;
+  }
+
+  &__image {
   }
 
   &__info-list {
@@ -334,25 +342,27 @@
   }
   
   &__info-text {
+    margin:0;
     font-size: 14px;
     line-height: 16px;
     color: #828282;
   }
 
   &__title {
-    margin-top: 15px;
+    margin: 15px 0 0 0;
     font-weight: bold;
     font-size: 24px;
     line-height: 29px;
   }
 
   &__text {
-    margin-top: 10px;
+    margin: 10px 0 0 0;
     font-size: 18px;
     line-height: 21px
   }
 
   &__link {
+    display: inline-block;
     cursor: pointer;
     margin-top: 20px;
     font-weight: bold;
